--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "setup-db": "curl -X GET http://localhost:3001/api/db/direct-setup"
+    "setup-db": "curl -X GET http://localhost:3001/api/db/direct-setup",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "typecheck": "tsc --noEmit",
+    "prebuild": "npm run lint:fix",
+    "analyze": "ANALYZE=true next build",
+    "test": "echo \"No tests found\" && exit 0",
+    "clean": "rm -rf .next out",
+    "postinstall": "npx patch-package"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -40,6 +48,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.2.3",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -49,7 +58,12 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "node-fetch": "^3.3.2",
+    "patch-package": "^8.0.0",
+    "prettier": "^3.2.5",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
