--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,8 +13,36 @@ env:
   NEXT_TELEMETRY_DISABLED: 1
 
 jobs:
+  verify:
+    name: Verify Code Quality
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+      
+      - name: Install Dependencies
+        run: npm ci
+      
+      - name: Run Linter
+        run: npm run lint
+      
+      - name: Type Check
+        run: npm run typecheck
+        
+      - name: Check Formatting
+        run: npx prettier --check .
+  
   deploy:
     name: Deploy to Coolify
+    needs: verify
     runs-on: ubuntu-latest
     
     steps:
@@ -42,12 +70,9 @@ jobs:
       
       - name: Install Dependencies
         run: npm ci
-      
-      - name: Run Linter (Non-blocking)
-        run: npm run lint:fix || true
-      
+        
       - name: Build Next.js App
-        run: npm run coolify-build
+        run: npm run build
         env:
           NEXT_PUBLIC_APP_ENV: ${{ steps.env-type.outputs.ENV_TYPE }}
       
