--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,12 @@ on:
     tags:
       - 'v*'
 
+# Add permissions for creating commit comments
+permissions:
+  contents: read
+  pull-requests: write
+  deployments: write
+
 env:
   NODE_VERSION: '18'
   NEXT_TELEMETRY_DISABLED: 1
