Switch from Coolify to Vercel deployment

--- a/.env.example
+++ b/.env.example
@@ -26,5 +26,7 @@ NEXT_PUBLIC_AVAILABLE_LOCALES=en,ar
 NEXT_PUBLIC_DASHBOARD_TITLE="OSINT Dashboard"
 NEXT_PUBLIC_COMPANY_NAME="Your Company"
 
-# Coolify Deployment (for CI/CD)
-COOLIFY_WEBHOOK_URL=your-coolify-webhook-url 
+# Vercel Deployment Configuration
+VERCEL_PROJECT_ID=your-vercel-project-id
+VERCEL_ORG_ID=your-vercel-org-id
+VERCEL_GIT_COMMIT_SHA=$VERCEL_GIT_COMMIT_SHA 
