--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,19 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "installCommand": "npm ci",
   "framework": "nextjs",
+  "buildCommand": "npm run vercel-build",
+  "installCommand": "npm ci",
   "regions": ["iad1"],
+  "ignoreCommand": "npx --no -- turbo-ignore",
   "build": {
     "env": {
-      "NEXT_PUBLIC_SUPABASE_URL": "placeholder-during-build",
-      "NEXT_PUBLIC_SUPABASE_ANON_KEY": "placeholder-during-build",
-      "SUPABASE_SERVICE_ROLE_KEY": "placeholder-during-build"
+      "NEXT_PUBLIC_SUPABASE_URL": "https://placeholder-url.supabase.co",
+      "NEXT_PUBLIC_SUPABASE_ANON_KEY": "placeholder-key",
+      "SUPABASE_SERVICE_ROLE_KEY": "placeholder-service-key",
+      "NEXT_PUBLIC_VERCEL_ENV": "production",
+      "VERCEL_ENV": "build",
+      "NEXTAUTH_URL": "https://placeholder-auth-url.vercel.app",
+      "NEXTAUTH_SECRET": "placeholder-secret-key-for-build-only"
     }
   },
   "github": {
