Add deployment scripts and update documentation

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,82 @@
-# Authentication Configuration
+# OSINT Dashboard Environment Variables Example
+# Copy this file to .env.local and fill in the appropriate values
+
+# ========================================
+# Application Configuration
+# ========================================
+NODE_ENV=development
+NEXT_TELEMETRY_DISABLED=1
+
+# ========================================
+# Deployment Configuration
+# ========================================
+# Base URL for your application (required for NextAuth.js)
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your-secret-key-at-least-32-chars-long
+# Secret used to encrypt cookies and tokens (generate with `openssl rand -base64 32`)
+NEXTAUTH_SECRET=your-nextauth-secret-here
 
+# ========================================
 # Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-key
+# ========================================
+# Supabase project URL
+NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project.supabase.co
+# Supabase anonymous key (public)
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+# Supabase service role key (private, server-side only)
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
-# Email Configuration (SMTP)
+# ========================================
+# Email Configuration
+# ========================================
+# SMTP server settings for sending emails
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_USER=your-smtp-username
 SMTP_PASSWORD=your-smtp-password
-EMAIL_FROM=no-reply@yourdomain.com
+SMTP_FROM_NAME=OSINT Dashboard
+SMTP_FROM_EMAIL=noreply@yourdomain.com
 
-# reCAPTCHA Configuration
+# ========================================
+# Security & Authentication
+# ========================================
+# Google reCAPTCHA v3 keys for form protection
 RECAPTCHA_SITE_KEY=your-recaptcha-site-key
 RECAPTCHA_SECRET_KEY=your-recaptcha-secret-key
 
-# Localization
-NEXT_PUBLIC_DEFAULT_LOCALE=en
-NEXT_PUBLIC_AVAILABLE_LOCALES=en,ar
+# JWT token expiration settings (in seconds)
+# 30 days = 2592000 seconds
+JWT_EXPIRATION=2592000
+# 7 days = 604800 seconds  
+JWT_REFRESH_EXPIRATION=604800
+
+# OTP verification settings
+OTP_EXPIRY_MINUTES=10
+PASSWORD_RESET_EXPIRY_MINUTES=30
+
+# ========================================
+# Localization & Regional Settings
+# ========================================
+# Default locale for the application
+DEFAULT_LOCALE=en
+# Supported locales (comma-separated)
+SUPPORTED_LOCALES=en,ar
+
+# ========================================
+# Vercel-specific Configuration
+# ========================================
+# Set to 'true' during Vercel builds to skip certain validations
+VERCEL_ENV=development
+NEXT_PUBLIC_VERCEL_ENV=development
+SKIP_ENV_VALIDATION=false
+SKIP_API_VALIDATION=false
+
+# ========================================
+# Development & Testing
+# ========================================
+# Set to 'true' to enable detailed logging
+DEBUG=false
+# Memory allocation for builds (MB)
+NODE_OPTIONS=--max-old-space-size=4096
 
 # Dashboard Configuration
 NEXT_PUBLIC_DASHBOARD_TITLE="OSINT Dashboard"
