Add deployment scripts, documentation, and updates from develop branch

--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "dev:webpack": "next dev",
-    "build": "next build",
+    "build": "FORCE_BUILD=true NODE_ENV=production next build --no-lint",
+    "build:force": "FORCE_BUILD=true NODE_ENV=production next build --no-lint",
     "start": "next start",
     "lint": "next lint",
     "setup-db": "curl -X GET http://localhost:3001/api/db/direct-setup",
-    "lint:fix": "next lint --fix || true",
+    "lint:fix": "next lint --fix",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit || true",
-    "prebuild": "npm run lint:fix || true",
+    "typecheck": "tsc --noEmit",
+    "prebuild": "echo \"Skipping pre-build checks\"",
     "analyze": "ANALYZE=true next build",
-    "test": "echo \"No tests found\" && exit 0",
-    "clean": "rm -rf .next out",
-    "postinstall": "npx patch-package || true",
-    "build:clean": "npm run clean && npm run build",
+    "test": "jest",
+    "clean": "rm -rf .next node_modules",
+    "postinstall": "[ -d .git ] && git config core.hooksPath .github/hooks || true",
+    "build:clean": "rm -rf .next && npm run build",
+    "coolify-build": "NODE_ENV=production npm run build:clean",
+    "fix-code-quality": "npm run format && npm run lint:fix",
+    "build:production": "npm run lint:fix && npm run typecheck && next build",
     "vercel-build": "NODE_OPTIONS='--max-old-space-size=4096' NEXT_PUBLIC_VERCEL_ENV=production VERCEL_ENV=build SKIP_ENV_VALIDATION=1 SKIP_API_VALIDATION=1 next build || (echo 'Build failed! Trying again with debug logs:' && NODE_OPTIONS='--max-old-space-size=4096' NEXT_PUBLIC_VERCEL_ENV=production VERCEL_ENV=build SKIP_ENV_VALIDATION=1 SKIP_API_VALIDATION=1 DEBUG=* next build)"
   },
   "dependencies": {
