fix: resolve type errors in auth and registration flows

--- a/.env.example
+++ b/.env.example
@@ -1,86 +1,96 @@
-# OSINT Dashboard Environment Variables Example
-# Copy this file to .env.local and fill in the appropriate values
-
 # ========================================
 # Application Configuration
 # ========================================
-NODE_ENV=development
-NEXT_TELEMETRY_DISABLED=1
+NODE_ENV="development"
+NEXT_TELEMETRY_DISABLED="1"
 
 # ========================================
-# Deployment Configuration
+# NextAuth Configuration
 # ========================================
-# Base URL for your application (required for NextAuth.js)
-NEXTAUTH_URL=http://localhost:3000
-# Secret used to encrypt cookies and tokens (generate with `openssl rand -base64 32`)
-NEXTAUTH_SECRET=your-nextauth-secret-here
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your-nextauth-secret-key"
+
+# ========================================
+# Admin Configuration
+# ========================================
+ADMIN_ACTIVATION_KEY="your-admin-activation-key"
+SKIP_AUTH_VALIDATION="false"
 
 # ========================================
 # Supabase Configuration
 # ========================================
-# Supabase project URL
-NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project.supabase.co
-# Supabase anonymous key (public)
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
-# Supabase service role key (private, server-side only)
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret
+
+# ========================================
+# PostgreSQL Database Information
+# ========================================
+POSTGRES_URL=your-postgres-url
+POSTGRES_PRISMA_URL=your-postgres-prisma-url
+POSTGRES_URL_NON_POOLING=your-postgres-non-pooling-url
+POSTGRES_USER=your-postgres-user
+POSTGRES_PASSWORD=your-postgres-password
+POSTGRES_DATABASE=your-postgres-database
+POSTGRES_HOST=your-postgres-host
 
 # ========================================
 # Email Configuration
 # ========================================
-# SMTP server settings for sending emails
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=your-smtp-username
-SMTP_PASSWORD=your-smtp-password
-SMTP_FROM_NAME=OSINT Dashboard
-SMTP_FROM_EMAIL=noreply@yourdomain.com
+EMAIL_USER=your-email@example.com
+EMAIL_PASS=your-email-password
+SMTP_SERVER_USERNAME=your-smtp-username
+SMTP_SERVER_PASSWORD=your-smtp-password
+SMTP_SERVER_HOST=smtp.example.com
+SITE_MAIL_RECEIVER=receiver@example.com
 
 # ========================================
 # Security & Authentication
 # ========================================
-# Google reCAPTCHA v3 keys for form protection
-RECAPTCHA_SITE_KEY=your-recaptcha-site-key
-RECAPTCHA_SECRET_KEY=your-recaptcha-secret-key
+RECAPTCHA_SITE_KEY="your-recaptcha-site-key"
+RECAPTCHA_SECRET_KEY="your-recaptcha-secret-key"
 
 # JWT token expiration settings (in seconds)
-# 30 days = 2592000 seconds
-JWT_EXPIRATION=2592000
-# 7 days = 604800 seconds  
-JWT_REFRESH_EXPIRATION=604800
+JWT_EXPIRATION="2592000"  # 30 days
+JWT_REFRESH_EXPIRATION="604800"  # 7 days
 
 # OTP verification settings
-OTP_EXPIRY_MINUTES=10
-PASSWORD_RESET_EXPIRY_MINUTES=30
+OTP_EXPIRY_MINUTES="10"
+PASSWORD_RESET_EXPIRY_MINUTES="30"
+
+# ========================================
+# API Configuration
+# ========================================
+NEXT_PUBLIC_API_URL="http://localhost:3000/api"
 
 # ========================================
 # Localization & Regional Settings
 # ========================================
-# Default locale for the application
-DEFAULT_LOCALE=en
-# Supported locales (comma-separated)
-SUPPORTED_LOCALES=en,ar
+NEXT_PUBLIC_DEFAULT_LOCALE="en"
+NEXT_PUBLIC_AVAILABLE_LOCALES="en,ar"
 
 # ========================================
 # Vercel-specific Configuration
 # ========================================
-# Set to 'true' during Vercel builds to skip certain validations
-VERCEL_ENV=development
-NEXT_PUBLIC_VERCEL_ENV=development
-SKIP_ENV_VALIDATION=false
-SKIP_API_VALIDATION=false
+VERCEL_ENV="development"
+NEXT_PUBLIC_VERCEL_ENV="development"
+SKIP_ENV_VALIDATION="false"
+SKIP_API_VALIDATION="false"
 
 # ========================================
 # Development & Testing
 # ========================================
-# Set to 'true' to enable detailed logging
-DEBUG=false
-# Memory allocation for builds (MB)
-NODE_OPTIONS=--max-old-space-size=4096
+DEBUG="false"
+NODE_OPTIONS="--max-old-space-size=4096"
 
+# ========================================
 # Dashboard Configuration
+# ========================================
 NEXT_PUBLIC_DASHBOARD_TITLE="OSINT Dashboard"
 NEXT_PUBLIC_COMPANY_NAME="Your Company"
 
-# Coolify Deployment (for CI/CD)
-COOLIFY_WEBHOOK_URL=your-coolify-webhook-url 
+# ========================================
+# Deployment Configuration
+# ========================================
+COOLIFY_WEBHOOK_URL="your-coolify-webhook-url" 
