--- a/package.json
+++ b/package.json
@@ -3,26 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "dev:webpack": "next dev",
-    "build": "FORCE_BUILD=true NODE_ENV=production next build --no-lint",
-    "build:force": "FORCE_BUILD=true NODE_ENV=production next build --no-lint",
+    "dev": "next dev --turbo",
     "start": "next start",
     "lint": "next lint",
-    "setup-db": "curl -X GET http://localhost:3001/api/db/direct-setup",
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
-    "prebuild": "echo \"Skipping pre-build checks\"",
-    "analyze": "ANALYZE=true next build",
-    "test": "jest",
-    "clean": "rm -rf .next node_modules",
-    "postinstall": "[ -d .git ] && git config core.hooksPath .github/hooks || true",
+    "build": "NODE_ENV=production next build",
     "build:clean": "rm -rf .next && npm run build",
-    "coolify-build": "NODE_ENV=production npm run build:clean",
-    "fix-code-quality": "npm run format && npm run lint:fix",
-    "build:production": "npm run lint:fix && npm run typecheck && next build",
-    "vercel-build": "NODE_OPTIONS='--max-old-space-size=4096' NEXT_PUBLIC_VERCEL_ENV=production VERCEL_ENV=build SKIP_ENV_VALIDATION=1 SKIP_API_VALIDATION=1 next build || (echo 'Build failed! Trying again with debug logs:' && NODE_OPTIONS='--max-old-space-size=4096' NEXT_PUBLIC_VERCEL_ENV=production VERCEL_ENV=build SKIP_ENV_VALIDATION=1 SKIP_API_VALIDATION=1 DEBUG=* next build)"
+    "analyze": "ANALYZE=true next build",
+    "lint-build": "node scripts/lint-and-build.js",
+    "// Deployment Builds": "----------",
+    "vercel-build": "NODE_OPTIONS='--max-old-space-size=4096' NEXT_PUBLIC_VERCEL_ENV=production VERCEL_ENV=build next build || (echo 'Build failed! Trying again with debug logs:' && NODE_OPTIONS='--max-old-space-size=4096' NEXT_PUBLIC_VERCEL_ENV=production VERCEL_ENV=build DEBUG=* next build)",
+    "// Testing": "----------",
+    "test": "jest",
+    "// Utilities": "----------",
+    "clean": "rm -rf .next node_modules",
+    "postinstall": "[ -d .git ] && git config core.hooksPath .github/hooks || true"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -43,13 +40,14 @@
     "@types/zxcvbn": "^4.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "geist": "^1.3.1",
     "lucide-react": "^0.483.0",
-    "next": "15.2.3",
-    "next-auth": "^4.24.11",
+    "next": "14.1.3",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
@@ -59,20 +57,25 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@next/bundle-analyzer": "^15.2.3",
+    "@next/bundle-analyzer": "14.1.3",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
+    "@typescript-eslint/eslint-plugin": "^8.27.0",
+    "@typescript-eslint/parser": "^8.27.0",
+    "chalk": "^4.1.2",
     "dotenv": "^16.4.7",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.29.1",
     "node-fetch": "^3.3.2",
     "patch-package": "^8.0.0",
     "prettier": "^3.2.5",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.4.2"
   },
   "engines": {
     "node": ">=18.0.0"
