--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@supabase/supabase-js": "^2.39.7",
     "@types/nodemailer": "^6.4.17",
     "@types/zxcvbn": "^4.4.5",
     "class-variance-authority": "^0.7.1",
@@ -58,13 +59,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "14.1.3",
-    "@supabase/supabase-js": "^2.49.1",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
+    "autoprefixer": "^10.4.18",
     "chalk": "^4.1.2",
     "dotenv": "^16.4.7",
     "eslint": "^8.57.0",
@@ -73,8 +73,9 @@
     "eslint-plugin-import": "^2.29.1",
     "node-fetch": "^3.3.2",
     "patch-package": "^8.0.0",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   },
   "engines": {
