--- a/package.json
+++ b/package.json
@@ -37,19 +37,21 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.39.7",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/nodemailer": "^6.4.17",
     "@types/zxcvbn": "^4.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
     "lucide-react": "^0.483.0",
-    "next": "14.1.3",
+    "next": "^14.1.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
@@ -64,7 +66,7 @@
     "@types/react-dom": "18.2.21",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.21",
     "chalk": "^4.1.2",
     "dotenv": "^16.4.7",
     "eslint": "^8.57.0",
@@ -73,9 +75,9 @@
     "eslint-plugin-import": "^2.29.1",
     "node-fetch": "^3.3.2",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.5.3",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.4.2"
   },
   "engines": {
