Fix authentication issues and add better debugging

--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,16 @@ GENERATE_SOURCEMAP=false
 NODE_ENV=production
 
 # Add all your other production environment variables below
-# (but we're NOT adding secrets here - those should be set in your deployment platform) 
+# (but we're NOT adding secrets here - those should be set in your deployment platform)
+
+# Authentication
+NEXTAUTH_URL=https://adminosint.vercel.app
+NEXTAUTH_SECRET=your-secret-key-should-be-set-in-vercel-dashboard
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-url-should-be-set-in-vercel-dashboard
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key-should-be-set-in-vercel-dashboard
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key-should-be-set-in-vercel-dashboard
+
+# Debug
+DEBUG=true 
